Add `required` attributes
